fixed bug (evaluations not showing)

--- a/exit_interview_system/student_side/student_home_style.css
+++ b/exit_interview_system/student_side/student_home_style.css
@@ -87,7 +87,7 @@ main {
     width: 81.25rem;
 }
 
-#archivedList {
+#answeredList {
     display: none;
     margin-top: 14px;
     flex-wrap: wrap;
